# lighter-BE

./: Dockerfile  Makefile  Makefile.prod  README.md  pyproject.toml  test.py
backend/: application.py  main.py  router.py
backend/app/models/: badge.py  writing.py  writing_setting.py  wrting_set_up.py
backend/app/routers/: echo.py  glooing.py  main.py  my.py  root.py  sample.py  timer.py  user.py  ws_glooing.py
backend/core/config/: const.py  env.py
backend/core/db/: connect.py
backend/core/security/: dependency.py
backend/core/utils/: date_time.py  jwt_token.py
backend/examples/: tutorial.py
backend/fastapi_oauth_client/: oauth_client.py
backend/templates/: remaining_time.html  show_time.html  show_time.js  websocket.py
backend/tests/: timer.py
nginx/: frontend
nginx/http/: froxy_http.conf  reverse_proxy.conf
nginx/https/: v.1.1-1.0.conf
