[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Connor <kor.connor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
pymongo = "^4.6.1"
pydantic-settings = "^2.1.0"
pytz = "^2023.4"
websockets = "^12.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
